--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fake-youtube",
-  "homepage": "https://1tzmara49-lgtm.github.io/practiveFake-tube/",
+  "homepage": "https://1tzmara49-lgtm.github.io/silver-chainsaw/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
